<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Tanggal Pengerjaan : 18/5/2021
  ~     Nim : 10118056
  ~     Nama : Mirraz Ibrahim
  ~     email : mirrazibrahim@gmail.com
  ~     Copyright © 2021 Mirraz Ibrahim. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/menu_daily"
        android:title="@string/daily"
        android:icon="@drawable/daily"/>
    <item
        android:id="@+id/menu_gallery"
        android:title="@string/gallery"
        android:icon="@drawable/gallery"/>
    <item
        android:id="@+id/menu_media"
        android:title="@string/media"
        android:icon="@drawable/media"/>
    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"/>

</menu>