<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Tanggal Pengerjaan : 17/5/2022
  ~     Nim : 10119203
  ~     Nama : Albee Akbar Fillah
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@color/blue_light">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/raleway_black"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/judul"
        android:background="@drawable/roundedbg"
        android:layout_marginBottom="50dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/raleway_black"
                    android:gravity="left"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    tools:ignore="RtlHardcoded" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/imageList"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:src="@drawable/profilealb"
                    app:civ_border="false"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/darkgreen"
                    app:civ_shadow_radius="5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/raleway_light"
                    android:text="Albee "
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/nunitosans_light"
                    android:gravity="left"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:ignore="RtlHardcoded" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/nim"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/_10119203"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/kelas"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/if_5"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/alamat"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/alamatlengkap"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/agama"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/islam"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/jenis_kelamin"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/laki_laki"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>
                </TableLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/nunitosans_light"
                    android:gravity="left"
                    android:text="@string/interest2"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:ignore="RtlHardcoded" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/hobi"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/hangout"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/makanan_kesukaan"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/bakso"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/minuman_kesukaan"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/thaitea"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/interest2"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/football"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/cita_cita"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/webdev"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

        </ScrollView>

</RelativeLayout>

</RelativeLayout>