<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Tanggal Pengerjaan : 17/5/2022
  ~     Nim : 10119203
  ~     Nama : Albee Akbar Fillah
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/raleway_black"
            android:gravity="center"
            android:text="@string/daily"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/konten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/judul"
        android:layout_marginBottom="50dp"
        android:background="@drawable/roundedbg">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/raleway_light"
                    android:gravity="left"
                    android:text="@string/daily_activity"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:ignore="RtlHardcoded" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/list_item"></androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/raleway_light"
                    android:gravity="left"
                    android:text="@string/friendlist"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:ignore="RtlHardcoded" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="30dp"
                    android:scrollbars="horizontal"
                    tools:listitem="@layout/list_item" />


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>